--- a/X3DH.ipynb
+++ b/X3DH.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cryptography.hazmat.backends import default_backend\n",
-    "from cryptography.hazmat.primitives import hashes\n",
+    "from cryptography.hazmat.primitives import hashes, serialization\n",
     "from cryptography.hazmat.primitives.asymmetric import dh, padding, rsa, utils\n",
     "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
     "import hashlib\n",
-    "\n",
+    "import json\n",
     "parameters = dh.generate_parameters(generator=2, key_size=512, backend=default_backend())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,20 +40,26 @@
     "    \n",
     "        # Need a way to generate this \n",
     "        self.Signature = parameters.generate_private_key()\n",
-    "        self.Signate_public_key = self.Signature.public_key()\n",
+    "        self.Signature_public_key = self.Signature.public_key()\n",
     "\n",
     "class server_user: \n",
     "    def __init__(self, name, identity, signed_prekey, onetime_prekey, signature):\n",
     "        self.name = name\n",
-    "        self.identity = identity\n",
-    "        self.signed_prekey = signed_prekey\n",
-    "        self.onetime_prekey = onetime_prekey\n",
-    "        self.signature = signature"
+    "        self.identity_public_key = identity\n",
+    "        self.Signed_prekey_public_key = signed_prekey\n",
+    "        self.One_time_prekey_public_key = onetime_prekey\n",
+    "        self.Signature_public_key = signature\n",
+    "\n",
+    "class initial_message: \n",
+    "    def  __init__(self, name, identity, ephemeral):\n",
+    "        self.name = name\n",
+    "        self.identity_public_key = identity\n",
+    "        self.Ephemeral_public_key = ephemeral "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,48 +67,23 @@
     "Bob = User(\"Bob\")\n",
     "\n",
     "Server = {}\n",
-    "Bob_Server = server_user(\"Bob\", Bob.identity_public_key, Bob.Signed_prekey_public_key, Bob.One_time_prekey_public_key, Bob.Signate_public_key)\n",
-    "Alice_Server = server_user(\"Alice\", Alice.identity_public_key, Alice.Signed_prekey_public_key, Alice.One_time_prekey_public_key, Alice.Signate_public_key)"
+    "\n",
+    "def pushToServer(user):\n",
+    "    Server[user.name] = server_user(user.name, user.identity_public_key, user.Signed_prekey_public_key, user.One_time_prekey_public_key, user.Signature_public_key)\n",
+    "\n",
+    "pushToServer(Alice)\n",
+    "pushToServer(Bob)\n",
+    "\n",
+    "def initialMessage(user): \n",
+    "    return initial_message(user.name, user.identity_public_key, user.Ephemeral_public_key)\n",
+    "\n",
+    "# Bob_Server = server_user(\"Bob\", Bob.identity_public_key, Bob.Signed_prekey_public_key, Bob.One_time_prekey_public_key, Bob.Signature_public_key)\n",
+    "# Alice_Server = server_user(\"Alice\", Alice.identity_public_key, Alice.Signed_prekey_public_key, Alice.One_time_prekey_public_key, Alice.Signature_public_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'X\\x80\\x95\\x16\\xd6\\x02\\xd9~&\\x1b\\x88\\xf8hG\\x11I_*k[W\\x1c\\xacs\\x02\\xc5\\xd8\\xfeZV6m'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DH1 = Alice.identity.exchange(Bob.Signed_prekey_public_key)\n",
-    "DH2 = Alice.Ephemeral.exchange(Bob.identity_public_key)\n",
-    "DH3 = Alice.Ephemeral.exchange(Bob.Signed_prekey_public_key)\n",
-    "DH4 = Alice.Ephemeral.exchange(Bob.One_time_prekey_public_key)\n",
-    "\n",
-    "# a_shared_key = a_private_key.exchange(b_peer_public_key)\n",
-    "# b_shared_key = b_private_key.exchange(a_peer_public_key)\n",
-    "\n",
-    "derived_key_Alice = HKDF(\n",
-    "    algorithm=hashes.SHA256(),\n",
-    "    length=32,\n",
-    "    salt=None,\n",
-    "    info=b'handshake data',\n",
-    ").derive(DH1 + DH2 + DH3 + DH4) \n",
-    "\n",
-    "derived_key_Alice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,53 +107,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'X\\x80\\x95\\x16\\xd6\\x02\\xd9~&\\x1b\\x88\\xf8hG\\x11I_*k[W\\x1c\\xacs\\x02\\xc5\\xd8\\xfeZV6m'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "DH1 = Bob.Signed_prekey.exchange(Alice.identity_public_key)\n",
-    "DH2 = Bob.identity.exchange(Alice.Ephemeral_public_key)\n",
-    "DH3 = Bob.Signed_prekey.exchange(Alice.Ephemeral_public_key)\n",
-    "DH4 = Bob.One_time_prekey.exchange(Alice.Ephemeral_public_key)\n",
-    "\n",
-    "derive_key_Bob = HKDF(\n",
-    "    algorithm=hashes.SHA256(),\n",
-    "    length=32,\n",
-    "    salt=None,\n",
-    "    info=b'handshake data',\n",
-    ").derive(DH1 + DH2 + DH3 + DH4) \n",
-    "\n",
-    "derive_key_Bob"
+    "sk = getDerivedKey1(Alice, Server[Bob.name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sk = getDerivedKey2(initialMessage(Alice), Bob)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Symmetric Ratchet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SymmRatchet(object):\n",
+    "    def __init__(self, key):\n",
+    "        self.state = key\n",
+    "\n",
+    "    def next(self, inp=b''):\n",
+    "        # turn the ratchet, changing the state and yielding a new key and IV\n",
+    "        output = HKDF(algorithm=hashes.SHA256(), length=80, salt=b'',\n",
+    "                          info=b'', backend= default_backend() \n",
+    "                         ).derive(self.state + inp) \n",
+    "        self.state = output[:32]\n",
+    "        outkey, iv = output[32:64], output[64:]\n",
+    "        return outkey, iv\n",
+    "    \n",
+    "class rachet_user_send: \n",
+    "    def __init__(self, sk):\n",
+    "        self.sk = sk\n",
+    "\n",
+    "    def init_ratchets(self):\n",
+    "        # initialise the root chain with the shared key\n",
+    "        self.root_ratchet = SymmRatchet(self.sk)\n",
+    "        # initialise the sending and recving chains\n",
+    "        self.recv_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "        self.send_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "\n",
+    "    \n",
+    "class rachet_user_recv: \n",
+    "    def __init__(self, sk):\n",
+    "        self.sk = sk\n",
+    "\n",
+    "    def init_ratchets(self):\n",
+    "        # initialise the root chain with the shared key\n",
+    "        self.root_ratchet = SymmRatchet(self.sk)\n",
+    "        # initialise the sending and recving chains\n",
+    "        self.send_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "        self.recv_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "\n",
+    "def b64(msg):\n",
+    "    # base64 encoding helper function\n",
+    "    return base64.encodebytes(msg).decode('utf-8').strip()\n",
+    "\n",
+    "bob = rachet_user_recv(sk)\n",
+    "alice = rachet_user_send(sk)\n",
+    "\n",
+    "bob.init_ratchets()\n",
+    "alice.init_ratchets()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "b'\"f\\xb3~\\xf5\\x8fJ\\xd7\\x9a\\xdb\\xb4\\xee/\\x90\\x91\\x0b\\xb1\\x90\\x94]\\x972\\rl\\xfd\\xd2\\xaah\\x8b\\x8bmo'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Alice]\tsend ratchet: ['IeiZHq7uXwziS0QNYE+3u6UtmCG7htn82YffCHw0SU8=', 'p7iMej0F2H5iY+rPSJdaDQ==']\n",
+      "[Bob]\trecv ratchet: ['IeiZHq7uXwziS0QNYE+3u6UtmCG7htn82YffCHw0SU8=', 'p7iMej0F2H5iY+rPSJdaDQ==']\n",
+      "[Alice]\trecv ratchet: ['g0zXDlzQII96yYJGCDFdsHOHWbM/7b6AipBN0ztJln0=', 'Uic/TvXqiAJKz+gIH1qG6Q==']\n",
+      "[Bob]\tsend ratchet: ['g0zXDlzQII96yYJGCDFdsHOHWbM/7b6AipBN0ztJln0=', 'Uic/TvXqiAJKz+gIH1qG6Q==']\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print('[Alice]\\tsend ratchet:', list(map(b64, alice.send_ratchet.next())))\n",
+    "print('[Bob]\\trecv ratchet:', list(map(b64, bob.recv_ratchet.next())))\n",
+    "print('[Alice]\\trecv ratchet:', list(map(b64, alice.recv_ratchet.next())))\n",
+    "print('[Bob]\\tsend ratchet:', list(map(b64, bob.send_ratchet.next())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import AES\n",
+    "from Crypto.Cipher import AES\n",
+    "\n",
+    "def pad(msg):\n",
+    "    # pkcs7 padding\n",
+    "    num = 16 - (len(msg) % 16)\n",
+    "    return msg + bytes([num] * num)\n",
+    "\n",
+    "def unpad(msg):\n",
+    "    # remove pkcs7 padding\n",
+    "    return msg[:-msg[-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SymmRatchet(object):\n",
+    "    def __init__(self, key):\n",
+    "        self.state = key\n",
+    "\n",
+    "    def next(self, inp=b''):\n",
+    "        # turn the ratchet, changing the state and yielding a new key and IV\n",
+    "        output = HKDF(algorithm=hashes.SHA256(), length=80, salt=b'',\n",
+    "                          info=b'', backend= default_backend() \n",
+    "                         ).derive(self.state + inp)  # takes in the state and the input\n",
+    "        self.state = output[:32]\n",
+    "        outkey, iv = output[32:64], output[64:]\n",
+    "        return outkey, iv\n",
+    "    \n",
+    "class rachet_user_send: \n",
+    "\n",
+    "    def __init__(self, sk):\n",
+    "        self.sk = sk\n",
+    "        self.DHratchet = None\n",
+    "\n",
+    "    def init_ratchets(self):\n",
+    "        # initialise the root chain with the shared key\n",
+    "        self.root_ratchet = SymmRatchet(self.sk)\n",
+    "        # initialise the sending and recving chains\n",
+    "        self.recv_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "        self.send_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "\n",
+    "    def dh_ratchet(self, bob_public):\n",
+    "    # perform a DH ratchet rotation using Bob's public key\n",
+    "        if self.DHratchet is not None:\n",
+    "            # the first time we don't have a DH ratchet yet\n",
+    "            dh_recv = self.DHratchet.exchange(bob_public)\n",
+    "            shared_recv = self.root_ratchet.next(dh_recv)[0]\n",
+    "            # use Bob's public and our old private key\n",
+    "            # to get a new recv ratchet\n",
+    "            self.recv_ratchet = SymmRatchet(shared_recv)\n",
+    "            print('[Alice]\\tRecv ratchet seed:', b64(shared_recv))\n",
+    "        # generate a new key pair and send ratchet\n",
+    "        # our new public key will be sent with the next message to Bob\n",
+    "        self.DHratchet = parameters.generate_private_key()\n",
+    "        dh_send = self.DHratchet.exchange(bob_public)\n",
+    "        shared_send = self.root_ratchet.next(dh_send)[0]\n",
+    "        self.send_ratchet = SymmRatchet(shared_send)\n",
+    "        print('[Alice]\\tSend ratchet seed:', b64(shared_send))\n",
+    "\n",
+    "\n",
+    "    def send(self, bob, msg):\n",
+    "        key, iv = self.send_ratchet.next()\n",
+    "        cipher = AES.new(key, AES.MODE_CBC, iv).encrypt(pad(msg))\n",
+    "        print('[Alice]\\tSending ciphertext to Bob:', b64(cipher))\n",
+    "        # send ciphertext and current DH public key\n",
+    "        bob.recv(cipher, self.DHratchet.public_key())\n",
+    "\n",
+    "    def recv(self, cipher, bob_public_key):\n",
+    "        # receive Bob's new public key and use it to perform a DH\n",
+    "        self.dh_ratchet(bob_public_key)\n",
+    "        key, iv = self.recv_ratchet.next()\n",
+    "        # decrypt the message using the new recv ratchet\n",
+    "        msg = unpad(AES.new(key, AES.MODE_CBC, iv).decrypt(cipher))\n",
+    "        print('[Alice]\\tDecrypted message:', msg)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "class rachet_user_recv: \n",
+    "    def __init__(self, sk):\n",
+    "        self.sk = sk\n",
+    "        self.DHratchet = parameters.generate_private_key()\n",
+    "\n",
+    "    def init_ratchets(self):\n",
+    "        # initialise the root chain with the shared key\n",
+    "        self.root_ratchet = SymmRatchet(self.sk)\n",
+    "        # initialise the sending and recving chains\n",
+    "        self.send_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "        self.recv_ratchet = SymmRatchet(self.root_ratchet.next()[0])\n",
+    "    \n",
+    "    def dh_ratchet(self, alice_public): \n",
+    "        dh_recv = self.DHratchet.exchange(alice_public)\n",
+    "        shared_recv = self.root_ratchet.next(dh_recv)[0]\n",
+    "        self.recv_ratchet = SymmRatchet(shared_recv)\n",
+    "        print('[Bob]\\tRecv ratchet seed:', b64(shared_recv))\n",
+    "        # generate a new key pair and send ratchet\n",
+    "        # our new public key will be sent with the next message to Alice\n",
+    "        self.DHratchet = parameters.generate_private_key()\n",
+    "        dh_send = self.DHratchet.exchange(alice_public)\n",
+    "        shared_send = self.root_ratchet.next(dh_send)[0]\n",
+    "        self.send_ratchet = SymmRatchet(shared_send)\n",
+    "        print('[Bob]\\tSend ratchet seed:', b64(shared_send))\n",
+    "\n",
+    "    def send(self, alice, msg):\n",
+    "        key, iv = self.send_ratchet.next()\n",
+    "        cipher = AES.new(key, AES.MODE_CBC, iv).encrypt(pad(msg))\n",
+    "        print('[Bob]\\tSending ciphertext to Alice:', b64(cipher))\n",
+    "        # send ciphertext and current DH public key\n",
+    "        alice.recv(cipher, self.DHratchet.public_key())\n",
+    "\n",
+    "    def recv(self, cipher, alice_public_key):\n",
+    "        # receive Alice's new public key and use it to perform a DH\n",
+    "        self.dh_ratchet(alice_public_key)\n",
+    "        key, iv = self.recv_ratchet.next()\n",
+    "        # decrypt the message using the new recv ratchet\n",
+    "        msg = unpad(AES.new(key, AES.MODE_CBC, iv).decrypt(cipher))\n",
+    "        print('[Bob]\\tDecrypted message:', msg)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Diffie Hellman Ratchet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Al = rachet_user_send(sk)\n",
+    "Bb = rachet_user_recv(sk)\n",
+    "\n",
+    "Al.init_ratchets()\n",
+    "Bb.init_ratchets()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Alice]\tSend ratchet seed: e9NhUFAcBnNwRL0sl82FU3mS34LplnmfKdjUEVd+Ogs=\n"
+     ]
+    }
+   ],
+   "source": [
+    "Al.dh_ratchet(Bb.DHratchet.public_key())"
+   ]
   }
  ],
  "metadata": {
