--- a/X3DH.ipynb
+++ b/X3DH.ipynb
@@ -1,40 +1,56 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from cryptography.hazmat.backends import default_backend\n",
-    "from cryptography.hazmat.primitives import hashes, serialization\n",
-    "from cryptography.hazmat.primitives.asymmetric import dh, padding, rsa, utils\n",
-    "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
-    "import hashlib\n",
-    "import json\n",
-    "parameters = dh.generate_parameters(generator=2, key_size=512, backend=default_backend())"
+    "# Implementing the Signal Protocol\n",
+    "\n",
+    "The Signal Protocol runs in two steps: <br>\n",
+    "The Extended Triple Diffie Helman, which is used for the intiial key exchange to generate the \"root\" key <br>\n",
+    "The Double Rachet Algorithm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# First, we need some imports\n",
+    "\n",
+    "from cryptography.hazmat.backends import default_backend\n",
+    "from cryptography.hazmat.primitives import hashes, serialization\n",
+    "from cryptography.hazmat.primitives.asymmetric import dh\n",
+    "from cryptography.hazmat.primitives.kdf.hkdf import HKDF # HKDF is a key derivation function\n",
+    "import hashlib\n",
+    "import json\n",
+    "\n",
+    "# Now, we need to generate the parameters for the Diffie-Hellman key exchange\n",
+    "parameters = dh.generate_parameters(generator=2, key_size=512, backend=default_backend())\n",
+    "\n",
+    "Server = {} # Server's data that is stored "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a User class for a client \n",
     "class User: \n",
     "    def __init__(self, name): \n",
     "        self.name = name\n",
-    "        \n",
     "        self.identity = parameters.generate_private_key()\n",
     "        self.identity_public_key = self.identity.public_key()\n",
-    "\n",
     "        self.Ephemeral = parameters.generate_private_key()\n",
     "        self.Ephemeral_public_key = self.Ephemeral.public_key()\n",
     "\n",
     "        # Need a way to generate this\n",
     "        self.Signed_prekey = parameters.generate_private_key()\n",
     "        self.Signed_prekey_public_key = self.Signed_prekey.public_key()\n",
-    "\n",
     "        self.One_time_prekey = parameters.generate_private_key()\n",
     "        self.One_time_prekey_public_key = self.One_time_prekey.public_key()\n",
     "    \n",
@@ -42,6 +58,8 @@
     "        self.Signature = parameters.generate_private_key()\n",
     "        self.Signature_public_key = self.Signature.public_key()\n",
     "\n",
+    "\n",
+    "# This class stores the \"pre-key bundle\" that is sent to the server\n",
     "class server_user: \n",
     "    def __init__(self, name, identity, signed_prekey, onetime_prekey, signature):\n",
     "        self.name = name\n",
@@ -50,6 +68,7 @@
     "        self.One_time_prekey_public_key = onetime_prekey\n",
     "        self.Signature_public_key = signature\n",
     "\n",
+    "# This class stores the \"initial message\" that is sent to the reciever of the message by the sender\n",
     "class initial_message: \n",
     "    def  __init__(self, name, identity, ephemeral):\n",
     "        self.name = name\n",
@@ -59,23 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Alice = User(\"Alice\")\n",
-    "Bob = User(\"Bob\")\n",
-    "\n",
-    "Server = {}\n",
-    "\n",
     "def pushToServer(user):\n",
     "    Server[user.name] = server_user(user.name, user.identity_public_key, user.Signed_prekey_public_key, user.One_time_prekey_public_key, user.Signature_public_key)\n",
     "\n",
-    "pushToServer(Alice)\n",
-    "pushToServer(Bob)\n",
-    "\n",
     "def initialMessage(user): \n",
     "    return initial_message(user.name, user.identity_public_key, user.Ephemeral_public_key)\n",
+    "\n",
+    "Alice = User(\"Alice\")\n",
+    "Bob = User(\"Bob\")\n",
+    "\n",
+    "pushToServer(Alice)\n",
+    "pushToServer(Bob)\n",
     "\n",
     "# Bob_Server = server_user(\"Bob\", Bob.identity_public_key, Bob.Signed_prekey_public_key, Bob.One_time_prekey_public_key, Bob.Signature_public_key)\n",
     "# Alice_Server = server_user(\"Alice\", Alice.identity_public_key, Alice.Signed_prekey_public_key, Alice.One_time_prekey_public_key, Alice.Signature_public_key)"
@@ -83,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,25 +119,15 @@
     "    DH3 = User2.Signed_prekey.exchange(User1.Ephemeral_public_key)\n",
     "    DH4 = User2.One_time_prekey.exchange(User1.Ephemeral_public_key)\n",
     "    derived_key = HKDF(algorithm=hashes.SHA256(), length=32, salt=None, info=b'handshake data',).derive(DH1 + DH2 + DH3 + DH4)\n",
-    "    return derived_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sk = getDerivedKey1(Alice, Server[Bob.name])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sk = getDerivedKey2(initialMessage(Alice), Bob)"
+    "    return derived_key\n",
+    "# Generate a derived key for Alice, using the information Bob put in the server\n",
+    "sk = getDerivedKey1(Alice, Server[Bob.name])\n",
+    "\n",
+    "# Generate a derived key for Bob, using  initial message information Alice sent to Bob\n",
+    "sk2 = getDerivedKey2(initialMessage(Alice), Bob)\n",
+    "\n",
+    "if sk == sk2:\n",
+    "    print(\"Same Key Generated:\", sk.hex())\n"
    ]
   },
   {
@@ -128,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Symmetric Ratchet"
+    "# Symmetric Ratchet\n"
    ]
   },
   {
@@ -255,7 +262,6 @@
     "        return outkey, iv\n",
     "    \n",
     "class rachet_user_send: \n",
-    "\n",
     "    def __init__(self, sk):\n",
     "        self.sk = sk\n",
     "        self.DHratchet = None\n",
@@ -300,7 +306,6 @@
     "        # decrypt the message using the new recv ratchet\n",
     "        msg = unpad(AES.new(key, AES.MODE_CBC, iv).decrypt(cipher))\n",
     "        print('[Alice]\\tDecrypted message:', msg)\n",
-    "\n",
     "\n",
     "    \n",
     "class rachet_user_recv: \n",
@@ -350,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diffie Hellman Ratchet"
+    "# Diffie Hellman Ratchet\n"
    ]
   },
   {
